# M-Schema

./: .gitignore  README.md  example.py  m_schema.py  pyproject.toml  requirements.txt
src/m_schema/: m_schema.py  schema_engine.py
