[project]
name = "m-schema"
version = "0.1.0"
description = "M-Schema: a semi-structure representation of database schema"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llama-index>=0.12.2",
    "numpy>=2.1.3",
    "sqlalchemy>=2.0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
